Prevent global horizontal scroll caused by topic progress

--- a/scss/common/_topic-post.scss
+++ b/scss/common/_topic-post.scss
@@ -739,6 +739,10 @@ nav {
 #topic-progress {
   flex-shrink: 0;
   height: $btn-height;
+
+  .bg {
+    max-width: 100%;
+  }
 }
 
 #topic-progress-wrapper {
